--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
 
         <div class="at-user__name"><%= yogurt.username%>#<%= yogurt.discriminator %></div>
 
-<img src="https://cdn.discordapp.com/emojis/778780190280646676.gif?size=96&quality=lossless" width="20" height="15">
+     <img src="https://cdn.discordapp.com/emojis/778780190280646676.gif?size=96&quality=lossless" width="20" height="15">
 
         </ul>
       </div>
@@ -65,7 +65,7 @@
 
         <div class="at-user__name"><%= rep7.username %>#<%= rep7.discriminator %></div>
 
-<img src="https://cdn.discordapp.com/emojis/778780190280646676.gif?size=96&quality=lossless" width="20" height="15">
+      <img src="https://cdn.discordapp.com/emojis/778780190280646676.gif?size=96&quality=lossless" width="20" height="15">
 
 
         </ul>
@@ -79,12 +79,12 @@
     <div class="at-column">
       <div class="at-user">
         <div class="at-user__avatar">
-        <img src="<%= member.user.displayAvatarURL({ dynamic: true, format: "png", size: 4096 }) %>" alt="<%= yogurt.username %>"/>
+        <img src="<%= member.user.displayAvatarURL({ dynamic: true, format: "png", size: 4096 }) %>" alt="<%= member.user.username %>"/>
         </div>
 
         <div class="at-user__name"><%= member.user.username %>#<%= member.user.discriminator %></div>
 
-<img src="https://cdn.discordapp.com/emojis/778780190280646676.gif?size=96&quality=lossless" width="20" height="15">
+      <img src="https://cdn.discordapp.com/emojis/778780190280646676.gif?size=96&quality=lossless" width="20" height="15">
 
 
         </ul>
@@ -94,10 +94,6 @@
 <% });%>
 
 
-
-<% members.forEach(member => { %>
-    <li><%= member.user.username %></li>
-<% });%>
 
 
 
