--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#000001"/>
+  <meta name="theme-color" content="#fbc2e3"/>
   <meta property="og:image" content="https://cdn.discordapp.com/emojis/911692966060511274.png?size=96">
   <link rel="shortcut icon" href="https://cdn.discordapp.com/emojis/936974683117588522.webp?size=96&quality=lossless" type="image/gif">
   <meta property="og:title" content="*:☆`"/>
