--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,8 @@
 <html lang="en" >
 
 
-<!-- 👑 -->
-
+<!-- yogurt-a-favor-de=kibes-de-neandertais-como-um-tal-de-alpha-fanboy-since-2010 -->
+<!-- https://www.youtube.com/watch?v=wfwWvJGFp9A -->
 
 
 <head>
