--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
 
     <div class="at-section__title"> <%= server.name %></div>
     <div id="button" style="cursor:pointer" onclick="servidor()">ENTRAR</div>  
-    <div id="button" style="cursor:pointer" onclick="vip()">🔜</div>
+    <div id="buttonvip" style="cursor:pointer" onclick="vip()">🔜</div>
     
   <script>
   const servidor = () => window.open('https://discord.gg/<%=server.vanityURLCode%>', '_blank');
