--- a/views/angel.ejs
+++ b/views/angel.ejs
@@ -4,10 +4,12 @@
 
 
 
+
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#BC5FF8"/>
+  <meta name="theme-color" content="#000001"/>
   <meta property="og:image" content="https://cdn.discordapp.com/emojis/911692966060511274.png?size=96">
   <link rel="shortcut icon" href="https://cdn.discordapp.com/emojis/936974683117588522.webp?size=96&quality=lossless" type="image/gif">
   <meta property="og:title" content="*:☆`"/>
@@ -30,7 +32,7 @@
 
     <div class="at-section__title"> <%= server.name %></div>
     <div id="button" style="cursor:pointer" onclick="servidor()">ENTRAR</div>  
-    <div id="button" style="cursor:pointer" onclick="vip()">🔙</div>
+    <div id="buttonvlt" style="cursor:pointer" onclick="vip()">🔙</div>
     
   <script>
   const servidor = () => window.open('https://discord.gg/<%=server.vanityURLCode%>', '_blank');
