--- a/views/angel.ejs
+++ b/views/angel.ejs
@@ -50,7 +50,7 @@ const vip = () => window.location.href = "/"
 
         <div class="at-user__name"><%= yogurt.username%>#<%= yogurt.discriminator %></div>
 
-<img src="https://cdn.discordapp.com/emojis/947737925993500732.gif?size=96&quality=lossless" width="20" height="15">
+<img src="https://cdn.discordapp.com/emojis/944379735306293300.webp?size=96&quality=lossless" width="20" height="15">
 
         </ul>
       </div>
@@ -71,7 +71,7 @@ const vip = () => window.location.href = "/"
 
         <div class="at-user__name"><%= member.user.username %>#<%= member.user.discriminator %></div>
 
-<img src="https://cdn.discordapp.com/emojis/947737925993500732.gif?size=96&quality=lossless" width="20" height="15">
+<img src="https://cdn.discordapp.com/emojis/944379735306293300.webp?size=96&quality=lossless" width="20" height="15">
 
 
         </ul>
