--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,7 +73,20 @@ const vip = () => window.location.href = "/angel"
     </div>
 
 
+    <div class="at-column">
+      <div class="at-user">
+        <div class="at-user__avatar">
+        <img src="<%= divinidade.displayAvatarURL({ dynamic: true, format: "png", size: 256 }) %>" alt="<%= rep7.username %>"/>
+        </div>
 
+        <div class="at-user__name"><%= divinidade.username %>#<%= rep7.discriminator %></div>
+
+<img src="https://cdn.discordapp.com/emojis/944379403708796988.gif?size=96&quality=lossless" width="20" height="15">
+
+
+        </ul>
+      </div>
+    </div>
   
 
 <% members.forEach(member => { %>
