--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,7 +79,7 @@ const vip = () => window.location.href = "/angel"
         <img src="<%= divinidade.displayAvatarURL({ dynamic: true, format: "png", size: 256 }) %>" alt="<%= rep7.username %>"/>
         </div>
 
-        <div class="at-user__name"><%= divinidade.username %>#<%= rep7.discriminator %></div>
+        <div class="at-user__name"><%= divinidade.username %>#<%= divinidade.discriminator %></div>
 
 <img src="https://cdn.discordapp.com/emojis/944379403708796988.gif?size=96&quality=lossless" width="20" height="15">
 
