--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,10 +46,11 @@ const vip = () => window.location.href = "/angel"
       <div class="at-user">
         <div class="at-user__avatar">
         <img src="<%= yogurt.displayAvatarURL({ dynamic: true, format: "png", size: 256 }) %>" alt="<%= yogurt.username %>"/>
-        <img src="https://cdn.discordapp.com/emojis/944379403708796988.gif?size=96&quality=lossless" width="20" height="15">
         </div>
 
-        <div class="at-user__name"><%= yogurt.username%>#<%= yogurt.discriminator %></div>
+        <div class="at-user__name"><%= yogurt.username%>#<%= yogurt.discriminator %>
+        <img src="https://cdn.discordapp.com/emojis/941474178090024971.webp?size=96&quality=lossless" width="20" height="15">
+</div>
 
 
         </ul>
