--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,30 +64,19 @@ const vip = () => window.location.href = "/angel"
         <img src="<%= rep7.displayAvatarURL({ dynamic: true, format: "png", size: 256 }) %>" alt="<%= rep7.username %>"/>
         </div>
 
-        <div class="at-user__name"><%= rep7.username %>#<%= rep7.discriminator %></div>
-
-<img src="https://cdn.discordapp.com/emojis/944379403708796988.gif?size=96&quality=lossless" width="20" height="15">
-
-
-        </ul>
-      </div>
-    </div>
+        <div class="at-user__name"><%= rep7.username %>#<%= rep7.discriminator %>
+        <img src="https://cdn.discordapp.com/emojis/941474178090024971.webp?size=96&quality=lossless" width="20" height="15">
+</div>
 
 
-    <div class="at-column">
-      <div class="at-user">
-        <div class="at-user__avatar">
-        <img src="<%= divinidade.displayAvatarURL({ dynamic: true, format: "png", size: 256 }) %>" alt="<%= rep7.username %>"/>
-        </div>
-
-        <div class="at-user__name"><%= divinidade.username %>#<%= divinidade.discriminator %></div>
-
-<img src="https://cdn.discordapp.com/emojis/944379403708796988.gif?size=96&quality=lossless" width="20" height="15">
 
 
         </ul>
       </div>
     </div>
+
+
+
   
 
 <% members.forEach(member => { %>
@@ -96,8 +85,10 @@ const vip = () => window.location.href = "/angel"
         <div class="at-user__avatar">
         <img src="<%= member.user.displayAvatarURL({ dynamic: true, format: "png", size: 256 }) %>" alt="<%= yogurt.username %>"/>
         </div>
-        <div class="at-user__name"><%= member.user.username %>#<%= member.user.discriminator %></div>
-<img src="https://cdn.discordapp.com/emojis/944379403708796988.gif?size=96&quality=lossless" width="20" height="15">
+        <div class="at-user__name"><%= member.user.username %>#<%= member.user.discriminator %>
+        <img src="https://cdn.discordapp.com/emojis/941474178090024971.webp?size=96&quality=lossless" width="20" height="15">
+</div>
+
         </ul>
       </div>
     </div>
