--- a/views/angel.ejs
+++ b/views/angel.ejs
@@ -48,9 +48,11 @@ const vip = () => window.location.href = "/"
         <img src="<%= yogurt.displayAvatarURL({ dynamic: true, format: "png", size: 256 }) %>" alt="<%= yogurt.username %>"/>
         </div>
 
-        <div class="at-user__name"><%= yogurt.username%>#<%= yogurt.discriminator %></div>
+        <div class="at-user__name"><%= yogurt.username%>#<%= yogurt.discriminator %>
+        <img src="https://cdn.discordapp.com/emojis/931546967732023356.webp?size=96&quality=lossless" width="20" height="15">
+</div>
 
-<img src="https://cdn.discordapp.com/emojis/944379735306293300.webp?size=96&quality=lossless" width="20" height="15">
+
 
         </ul>
       </div>
@@ -69,9 +71,11 @@ const vip = () => window.location.href = "/"
         <img src="<%= member.user.displayAvatarURL({ dynamic: true, format: "png", size: 256 }) %>" alt="<%= yogurt.username %>"/>
         </div>
 
-        <div class="at-user__name"><%= member.user.username %>#<%= member.user.discriminator %></div>
+        <div class="at-user__name"><%= member.user.username %>#<%= member.user.discriminator %>
+        <img src="https://cdn.discordapp.com/emojis/931546967732023356.webp?size=96&quality=lossless" width="20" height="15">
+</div>
 
-<img src="https://cdn.discordapp.com/emojis/944379735306293300.webp?size=96&quality=lossless" width="20" height="15">
+
 
 
         </ul>
