--- a/public/styles.css
+++ b/public/styles.css
@@ -205,7 +205,7 @@
     color: #fff;
 }
  #buttonvip {
-    border: 1px solid #BC5FF8;
+    border: 1px solid white;
     background-color: none;
     text-align: center;
     padding: 14px;
@@ -221,7 +221,7 @@
 }
 
 #buttonvip:hover{
-    background-color: #BC5FF8;
+    background-color: white;
     color: #fff;
 }
 
