--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@ const vip = () => window.location.href = "/angel"
         </div>
 
         <div class="at-user__name"><%= yogurt.username%>#<%= yogurt.discriminator %>
-        <img src="https://cdn.discordapp.com/emojis/952223888610295888.webp?size=96&quality=lossless" width="20" height="15">
+        <img src="https://cdn.discordapp.com/emojis/955556410681352262.gif?size=2048" width="20" height="15">
 </div>
 
 
@@ -69,7 +69,7 @@ const vip = () => window.location.href = "/angel"
         </div>
 
         <div class="at-user__name"><%= rep7.username %>#<%= rep7.discriminator %>
-        <img src="https://cdn.discordapp.com/emojis/952223888610295888.webp?size=96&quality=lossless" width="20" height="15">
+        <img src="https://cdn.discordapp.com/emojis/955556410681352262.gif?size=2048" width="20" height="15">
 </div>
 
 
@@ -92,7 +92,7 @@ const vip = () => window.location.href = "/angel"
         </a>
         </div>
         <div class="at-user__name"><%= member.user.username %>#<%= member.user.discriminator %>
-        <img src="https://cdn.discordapp.com/emojis/952223888610295888.webp?size=96&quality=lossless" width="20" height="15">
+        <img src="https://cdn.discordapp.com/emojis/955556410681352262.gif?size=2048" width="20" height="15">
 </div>
 
         </ul>
